<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:gravity="bottom"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:onClick="onConfirm">

    <EditText android:layout_width="match_parent"
              android:hint="@string/text_edit_enter_name"
              android:id="@+id/field_edit_name"
              android:textAlignment="center"
              android:layout_height="wrap_content" android:paddingLeft="15dp" android:paddingRight="15dp"/>

    <RelativeLayout android:layout_width="match_parent"
                  android:layout_weight="1"
                  android:layout_height="0dp">

        <NumberPicker android:layout_width="wrap_content"
                      android:id="@+id/number_picker_edit_set_freq"
                      android:layout_height="125dp" android:paddingLeft="10dp" android:gravity="top"></NumberPicker>

        <TextView android:layout_width="wrap_content"
                  android:layout_toRightOf="@id/number_picker_edit_set_freq"
                  android:layout_alignParentRight="true"
                  android:text="@string/text_edit_descriptor"
                  android:textSize="12pt"
                  android:paddingLeft="15dp"
                  android:layout_height="wrap_content" android:layout_alignParentBottom="false"
                  android:layout_alignParentLeft="false" android:layout_alignParentTop="false"
                  android:layout_alignParentEnd="false" android:layout_alignParentStart="false"
                  android:paddingTop="50dp" android:paddingRight="15dp"/>

        <NumberPicker android:layout_width="wrap_content"
                      android:layout_below="@id/number_picker_edit_set_freq"
                      android:id="@+id/number_picker_edit_set_freq_weekly"
                      android:layout_height="125dp" android:paddingLeft="10dp"></NumberPicker>

        <TextView android:layout_width="wrap_content"
                  android:text="@string/text_edit_descriptor_weekly"
                  android:textSize="12pt"
                  android:paddingLeft="15dp"
                  android:layout_height="wrap_content"
                  android:paddingTop="50dp" android:paddingRight="15dp"
                  android:layout_below="@+id/number_picker_edit_set_freq"
                  android:layout_toEndOf="@+id/number_picker_edit_set_freq"/>

    </RelativeLayout>

    <TextView android:layout_width="match_parent"
              android:id="@+id/text_edit_set_level"
              android:textSize="9pt"
              android:text="@string/text_edit_set_level"
              android:layout_height="wrap_content" android:textAlignment="center" android:paddingLeft="15dp"
              android:paddingRight="15dp"/>

    <SeekBar android:layout_width="match_parent"
             android:id="@+id/seekbar_moisture_level"
             android:layout_height="wrap_content"/>

    <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_gravity="center_horizontal"/>

    <Button android:id="@+id/button_edit_custom"
            android:onClick=""
            android:text="@string/button_edit_custom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:textColor="#7f7f7f"/>

    <Button android:id="@+id/button_edit_create"
            android:onClick="onConfirm"
            android:text="@string/button_edit_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button android:id="@+id/button_edit_upload"
            android:onClick=""
            android:text="@string/button_edit_upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</LinearLayout>