<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/schedules"
              android:orientation="vertical" tools:context=".BrowseActivity" android:baselineAligned="false">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_browse_new"
                android:id="@+id/button_browse_new" android:onClick="onCreatePressed"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_browse_edit"
                android:id="@+id/button_browse_edit" android:layout_gravity="center_horizontal"
                android:onClick="onEditPressed"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_browse_remove"
                android:onClick="onDeletePressed"
                android:id="@+id/button_browse_remove" android:layout_gravity="right"/>
        <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_browse_upload"
                android:id="@+id/button_browse_upload" android:layout_gravity="right"
                android:onClick="onUploadPressed"/>
    </LinearLayout>
</LinearLayout>